# indagator

./: .baw  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  pyproject.toml  requirements.dev  requirements.txt  setup.py
.baw/: project.cfg
.github/workflows/: release.yml  test.yml
color/: __init__.py  cli.py  pagecolor.py
color/feature/: statistics.py
detector/: __init__.py  __patch__.py  cli.py  path.py  quotes.py  titlepage.py
detector/bibliography/: alternate.py  column.py  data.py  invalid.py  judge.py  label.py  strategy.py  utils.py  vspace.py
detector/feature/: bibliography.py  formula.py  index.py  titlepage.py
detector/formula/: parser.py  serialize.py
detector/index/: strategy.py
detector/parser/: __init__.py  complete.py  date.py  institution.py  matrikel.py  thesis.py
detector/titlepage/: strategy.py
docs/: index.rst
docs/releases/: 0.5.0.rst  backlog.rst  releases.rst
indagator/: __init__.py  cli.py  path.py  quotes.py
indagator/feature/: formula.py  index.py  titlepage.py
indagator/formula/: parser.py
indagator/index/: strategy.py
indagator/titlepage/: strategy.py
tests/: __init__.py  conftest.py  test_cli.py  test_feature_titlepage.py  test_parser.py  test_parser_complete.py  test_parser_date.py  test_parser_institution.py  test_parser_matrikel.py  test_parser_person.py  test_parser_thesis.py  test_parser_title.py  test_regression.py
tests/bibliography/: test_authors.py  test_cli.py  test_data.py  test_invalid_input.py  test_parse_alternate.py  test_parse_double_column.py  test_reference_and_parser.py  test_reference_tech_parser.py  test_validate.py
tests/color_/: __init__.py  test_cli.py  test_pagecolor.py  test_regression.py  test_statistics.py
tests/detector_/: __init__.py  test_cli.py  test_regression.py
tests/fixtures/: simple.py  titlepage.py
tests/formula/: test_cli.py  test_formula_parser.py
tests/resources/: .gitignore  __init__.py  update.py
tests/titlepage/: example.py  test_feature_titlepage.py  test_parser.py  test_parser_complete.py  test_parser_date.py  test_parser_institution.py  test_parser_matrikel.py  test_parser_person.py  test_validate.py  (+2 more)
(+143 files in other folders)
