[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "indagator"
version = "0.40.2"
description = ""
requires-python = ">=3.12"
authors = [
    { name = "Helmut Konrad Schewe", email = "helmutus@outlook.com" },
]
dependencies = [
    "utilo>=2.109.0,<3.0.0",
    "iamraw>=4.92.0,<5.0.0",
    "geostrat>=1.5.1,<2.0.0",
    "germania>=1.32.0,<2.0.0",
    "configoss>=1.0.4,<2.0.0",
    "elementae>=1.0.1,<2.0.0",
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.readme]
file = "README"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "gennex==1.0.3",
    "hoverpower==1.5.1",
    "rawmaker==2.40.5",
    "sdatum==1.0.0",
    "utilotest==1.0.4",
]

[project.urls]
Homepage = "https://github.com/anaticulae/capita_ref"
Repository = "https://github.com/anaticulae/capita_ref"

[project.scripts]
colors = "color.cli:main"
detector = "detector.cli:main"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.changelog]
mode = "init"
output_format = "md"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"

[tool.semantic_release.commit_parser_options]
patch_tags = [
    "build",
    "chore",
    "ci",
    "deps",
    "docs",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = [
    "feat",
]

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "color",
    "color.feature",
    "indagator",
    "indagator.feature",
    "indagator.formula",
    "indagator.index",
    "indagator.titlepage",
    "indagator.titlepage.parser",
    "indagator.titlepage.persons",
]
exclude = [
    "tests*",
]

[tool.hoverhoverpower]
packages = [
    "BACHELOR",
    "BOOK",
    "DISS",
    "DOCU",
    "HOME",
    "MASTER",
    "ORDER",
    "PAPER",
]
